/**
 * gRPC Client Implementation
 */

#include "grpc/client.h"
#include "stats_collector.h"

#include <iostream>
#include <chrono>

// Note: In a real implementation, you would include generated gRPC headers
// #include "proto/lumashield.grpc.pb.h"

namespace lumashield {

GRPCClient::GRPCClient(const std::string& server_addr, bool use_tls)
    : server_addr_(server_addr)
    , use_tls_(use_tls)
{
}

GRPCClient::~GRPCClient() {
    Disconnect();
}

bool GRPCClient::Connect() {
    std::cout << "[gRPC] Connecting to " << server_addr_ << std::endl;
    
    // In a real implementation:
    // auto channel_creds = use_tls_ ? 
    //     grpc::SslCredentials(grpc::SslCredentialsOptions()) :
    //     grpc::InsecureChannelCredentials();
    // 
    // channel_ = grpc::CreateChannel(server_addr_, channel_creds);
    // stub_ = lumashield::ControlPlane::NewStub(channel_);
    
    // For now, simulate connection
    connected_.store(true);
    std::cout << "[gRPC] Connected successfully" << std::endl;
    
    return true;
}

void GRPCClient::Disconnect() {
    std::cout << "[gRPC] Disconnecting..." << std::endl;
    
    StopRuleStream();
    
    connected_.store(false);
    should_reconnect_.store(false);
    
    // Wait for reconnect thread
    if (reconnect_thread_.joinable()) {
        reconnect_thread_.join();
    }
    
    std::cout << "[gRPC] Disconnected" << std::endl;
}

std::vector<RuleUpdate> GRPCClient::Register(const AgentInfo& info) {
    std::cout << "[gRPC] Registering agent " << info.id << std::endl;
    
    std::vector<RuleUpdate> initial_rules;
    
    // In a real implementation:
    // lumashield::RegisterRequest request;
    // request.mutable_agent()->set_id(info.id);
    // request.mutable_agent()->set_hostname(info.hostname);
    // request.mutable_agent()->set_ip_address(info.ip_address);
    // request.mutable_agent()->set_version(info.version);
    // 
    // lumashield::RegisterResponse response;
    // grpc::ClientContext context;
    // 
    // grpc::Status status = stub_->Register(&context, request, &response);
    // 
    // if (status.ok() && response.success()) {
    //     for (const auto& rule : response.initial_rules()) {
    //         initial_rules.push_back(ConvertRule(rule));
    //     }
    // }
    
    std::cout << "[gRPC] Registration successful" << std::endl;
    
    return initial_rules;
}

bool GRPCClient::SendHeartbeat(const std::string& agent_id) {
    if (!connected_.load()) {
        return false;
    }
    
    // In a real implementation:
    // lumashield::HeartbeatRequest request;
    // request.set_agent_id(agent_id);
    // request.set_status(lumashield::AGENT_STATUS_ACTIVE);
    // request.set_timestamp(std::time(nullptr));
    // 
    // lumashield::HeartbeatResponse response;
    // grpc::ClientContext context;
    // context.set_deadline(std::chrono::system_clock::now() + std::chrono::seconds(5));
    // 
    // grpc::Status status = stub_->Heartbeat(&context, request, &response);
    // return status.ok() && response.acknowledged();
    
    // Simulated success
    return true;
}

bool GRPCClient::SendStats(const AgentStats& stats) {
    if (!connected_.load()) {
        return false;
    }
    
    // Queue stats for streaming
    {
        std::lock_guard<std::mutex> lock(queue_mutex_);
        stats_queue_.push(stats);
    }
    queue_cv_.notify_one();
    
    // In a real implementation with streaming, stats would be sent via the stream
    
    return true;
}

void GRPCClient::StartRuleStream(RuleUpdateCallback callback) {
    if (streaming_.load()) {
        return;
    }
    
    std::cout << "[gRPC] Starting rule stream..." << std::endl;
    
    {
        std::lock_guard<std::mutex> lock(callback_mutex_);
        rule_callback_ = callback;
    }
    
    streaming_.store(true);
    stream_thread_ = std::thread(&GRPCClient::StreamWorker, this);
}

void GRPCClient::StopRuleStream() {
    if (!streaming_.load()) {
        return;
    }
    
    std::cout << "[gRPC] Stopping rule stream..." << std::endl;
    
    streaming_.store(false);
    queue_cv_.notify_all();
    
    if (stream_thread_.joinable()) {
        stream_thread_.join();
    }
}

void GRPCClient::SetReconnectCallback(std::function<void()> callback) {
    reconnect_callback_ = callback;
}

void GRPCClient::StreamWorker() {
    std::cout << "[gRPC] Stream worker started" << std::endl;
    
    while (streaming_.load()) {
        // In a real implementation:
        // grpc::ClientContext context;
        // auto stream = stub_->StreamRules(&context);
        // 
        // // Receive thread
        // std::thread recv_thread([&]() {
        //     lumashield::RuleUpdate update;
        //     while (stream->Read(&update)) {
        //         RuleUpdate rule_update = ConvertRuleUpdate(update);
        //         std::lock_guard<std::mutex> lock(callback_mutex_);
        //         if (rule_callback_) {
        //             rule_callback_(rule_update);
        //         }
        //     }
        // });
        // 
        // // Send stats
        // while (streaming_.load()) {
        //     std::unique_lock<std::mutex> lock(queue_mutex_);
        //     queue_cv_.wait_for(lock, std::chrono::seconds(1), [this]() {
        //         return !stats_queue_.empty() || !streaming_.load();
        //     });
        //     
        //     while (!stats_queue_.empty() && streaming_.load()) {
        //         auto stats = stats_queue_.front();
        //         stats_queue_.pop();
        //         lock.unlock();
        //         
        //         lumashield::StatsReport report;
        //         FillStatsReport(report, stats);
        //         stream->Write(report);
        //         
        //         lock.lock();
        //     }
        // }
        // 
        // stream->WritesDone();
        // recv_thread.join();
        
        // Simulated streaming - just wait and process queue
        std::unique_lock<std::mutex> lock(queue_mutex_);
        queue_cv_.wait_for(lock, std::chrono::seconds(1), [this]() {
            return !stats_queue_.empty() || !streaming_.load();
        });
        
        // Clear queue (in real impl, would send to server)
        while (!stats_queue_.empty()) {
            stats_queue_.pop();
        }
    }
    
    std::cout << "[gRPC] Stream worker stopped" << std::endl;
}

void GRPCClient::ReconnectLoop() {
    while (should_reconnect_.load()) {
        if (!connected_.load()) {
            std::cout << "[gRPC] Attempting to reconnect..." << std::endl;
            
            if (Connect()) {
                if (reconnect_callback_) {
                    reconnect_callback_();
                }
            } else {
                // Wait before retrying
                std::this_thread::sleep_for(std::chrono::seconds(5));
            }
        } else {
            std::this_thread::sleep_for(std::chrono::seconds(1));
        }
    }
}

} // namespace lumashield
